added files and modife CSS

--- a/style.css
+++ b/style.css
@@ -76,6 +76,6 @@ footer {
 }
 
 #myBtn:hover {
-    background-color: #555;
+    background-color: #e7a7a7;
     /* Add a darker background on hover */
 }
